get created secrets.yml
get created secrets
 kubectl get secret curly  -o jsonpath='{.data}' -n larry

create secret 
 kubectl create secret  generic moe  -n larry   \
    --from-literal=username=dbuser \
    --from-literal=password='A83MaeKoz'




Mount in pod  


apiVersion: v1
kind: Pod
metadata:
  name:  secret-pod
  namespace: larry
spec:
  containers:
  - name: busybox
    image: busybox:1.33.1
    command: ['sh', '-c', 'cat /etc/credentials/username; cat /etc/credentials/password; while true; do sleep 5; done']
    volumeMounts:
    - name: foo
      mountPath: "/etc/credentials"
      readOnly: true
  volumes:
  - name: foo
    secret:
      secretName: moe
      optional: false # default setting; "mysecret" must exist 

kubectl exec secret-pod -n larry  -- ls /etc/credentials/
password
username
