podsecpolicy.yml
psp
apiVersion: policy/v1beta1
kind: PodSecurityPolicy
metadata:
  name: psp
  namespace: auth
spec:
  privileged: false  # Jangan izinkan Pod-Pod yang _privileged_!
  # Sisanya isi kolom-kolom yang dibutuhkan
  seLinux:
    rule: RunAsAny
  supplementalGroups:
    rule: RunAsAny
  runAsUser:
    rule: RunAsAny
  fsGroup:
    rule: RunAsAny
  volumes:
  - '*'


apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: cr
rules:
- apiGroups: ['policy']
  resources: ['podsecuritypolicies']
  verbs:     ['use']
  resourceNames:
  - psp
  

apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: crb
  namespace: auth
roleRef:
  kind: ClusterRole
  name: cr
  apiGroup: rbac.authorization.k8s.io
subjects:
# Mengotorisasi ServiceAccount spesifik
- kind: ServiceAccount
  name: auth-sa
  namespace: auth 


  cloud_user@k8s-control:~$ cat non-privileged-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: non-privileged-pod
  namespace: auth
spec:
  serviceAccount: auth-sa
  containers:
  - name: background-monitor
    image: radial/busyboxplus:curl
    command: ['sh', '-c', 'while true; do echo "Running..."; sleep 5; done']
cloud_user@k8s-control:~$ vi crb.yml
cloud_user@k8s-control:~$ k apply -f crb.yml 
clusterrolebinding.rbac.authorization.k8s.io/crb created
cloud_user@k8s-control:~$ k apply -f non-privileged-pod.yml
pod/non-privileged-pod created
cloud_user@k8s-control:~$ k apply -f privileged-pod.yml
Error from server (Forbidden): error when creating "privileged-pod.yml": pods "privileged-pod" is forbidden: PodSecurityPolicy: unable to admit pod: [spec.containers[0].securityContext.privileged: Invalid value: true: Privileged containers are not allowed]
cloud_user@k8s-control:~$ cat privileged-pod.yml 
apiVersion: v1
kind: Pod
metadata:
  name: privileged-pod
  namespace: auth
spec:
  serviceAccount: auth-sa
  containers:
  - name: background-monitor
    image: radial/busyboxplus:curl
    command: ['sh', '-c', 'while true; do echo "Running..."; sleep 5; done']
    securityContext:
      privileged: true
cloud_user@k8s-control:~$ cat non-privileged-pod.yml 
apiVersion: v1
kind: Pod
metadata:
  name: non-privileged-pod
  namespace: auth
spec:
  serviceAccount: auth-sa
  containers:
  - name: background-monitor
    image: radial/busyboxplus:curl
    command: ['sh', '-c', 'while true; do echo "Running..."; sleep 5; done']

    cloud_user@k8s-control:~$ k apply -f privileged-pod.yml
Error from server (Forbidden): error when creating "privileged-pod.yml": pods "privileged-pod" is forbidden: PodSecurityPolicy: unable to admit pod: [spec.containers[0].securityContext.privileged: Invalid value: true: Privileged containers are not allowed]
