secrets.yml
apiVersion: v1
kind: Pod
metadata:
  name: users-api
  namespace: users
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
    volumeMounts:
    - name: db-pass
      mountPath: "/etc/dbpass"
      readOnly: true
  volumes:
  - name: db-pass
    secret:
      secretName: db-pass

kubectl create secret generic db-pass -n users \
  --from-file=./dbpass.txt 

  pod/users-api created
cloud_user@k8s-control:~$ k get secrets -n users
NAME      TYPE     DATA   AGE
db-pass   Opaque   1      89s
cloud_user@k8s-control:~$ k get secrets db-pass  -n users
NAME      TYPE     DATA   AGE
db-pass   Opaque   1      98s
cloud_user@k8s-control:~$ k get secrets db-pass  -n users -o yaml
apiVersion: v1
data:
  dbpass.txt: VHJ1c3RObzEK
kind: Secret
metadata:
  creationTimestamp: "2022-10-03T07:21:43Z"
  name: db-pass
  namespace: users
  resourceVersion: "1393"
  uid: 897940ff-905e-4a0b-907c-eadfc572b505
type: Opaque
cloud_user@k8s-control:~$ echo VHJ1c3RObzEK | base64 --decode
TrustNo1
