tls_ingress.yml
openssl req -nodes -new  -x509 -keyout  accounts.key -out accounts.crt  -subj "/CN=accounts.svc" -days 10000

Generamos secreto



apiVersion: v1
kind: Secret
metadata:
  name: secret-tls
  namespace: accounts
type: kubernetes.io/tls
data:
  # the data is abbreviated in this example
  tls.crt: |
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUREekNDQWZlZ0F3SUJBZ0lVYmtmekt5eDY4
[...]
        MWJHNlc1ZnE3V1E9PQotLS0tLUVORCBDRVJUSUZJQ0FURS0tLS0tCg==
  tls.key: |
        LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZB
[...]
  

Creamos el ingress tls

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-example-ingress
  namespace: accounts
spec:
  tls:
  - hosts:
      - accounts-svc
    secretName: secret-tls
  rules:
  - host: accounts-svc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: accounts-svc
            port:
              number: 80
