lock_down_pods_traffic.yml
Block Incoming Traffic by Default for All Pods in the web-auth Namespace

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: web-auth
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  

Allow Traffic from the auth-client Pod to Reach the web-auth-server

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-network-policy
  namespace: web-auth
spec:
  podSelector:
    matchLabels:
      app: auth-server
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            ns: web-auth
      - podSelector:
          matchLabels:
            app: auth-client
      ports:
        - protocol: TCP
          port: 8
